--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=217,53
+Pos=99,91
 Size=347,240
+Collapsed=0
+
+[Window][Solver Options]
+Pos=60,59
+Size=381,343
 Collapsed=0
 
