--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -205,6 +205,8 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="BinaryStream\BinaryReader.h" />
     <ClInclude Include="BinaryStream\BinaryWriter.h" />
+    <ClInclude Include="Cuda\StreamlineSolver.h" />
+    <ClInclude Include="Graphics\RenderImGui.h" />
     <ClInclude Include="Graphics\Graphics.h" />
     <ClInclude Include="Graphics\AdapterReader.h" />
     <ClInclude Include="Graphics\ImGui\imconfig.h" />
