--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -82,7 +82,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)\Includes;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)Libs\x64\Debug;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\lib\x64;$(SolutionDir)Libs\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -125,7 +125,12 @@
     </CudaCompile>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
+      <CodeGeneration>compute_61,sm_61</CodeGeneration>
     </CudaCompile>
+    <CudaLink>
+      <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cudart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </CudaLink>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -177,6 +182,10 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="BinaryStream\BinaryReader.cpp" />
     <ClCompile Include="BinaryStream\BinaryWriter.cpp" />
+    <CudaCompile Include="Cuda\StreamlineSolver.cu">
+      <FileType>Document</FileType>
+    </CudaCompile>
+    <ClCompile Include="VelocityField.cpp" />
     <ClCompile Include="Graphics\ImGui\imgui.cpp" />
     <ClCompile Include="Graphics\ImGui\imgui_draw.cpp" />
     <ClCompile Include="Graphics\ImGui\imgui_impl_dx11.cpp" />
@@ -205,7 +214,10 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="BinaryStream\BinaryReader.h" />
     <ClInclude Include="BinaryStream\BinaryWriter.h" />
-    <ClInclude Include="Cuda\StreamlineSolver.h" />
+    <CudaCompile Include="Cuda\StreamlineSolver.cuh" />
+    <ClInclude Include="SolverOptions.h" />
+    <ClInclude Include="Particle.cuh" />
+    <ClInclude Include="VelocityField.h" />
     <ClInclude Include="Graphics\RenderImGui.h" />
     <ClInclude Include="Graphics\Graphics.h" />
     <ClInclude Include="Graphics\AdapterReader.h" />
@@ -222,7 +234,7 @@
     <ClInclude Include="Graphics\ConsantBufferTypes.h" />
     <ClInclude Include="Graphics\ConstantBuffer.h" />
     <ClInclude Include="Graphics\Camera.h" />
-    <ClInclude Include="linearIndex.cuh" />
+    <CudaCompile Include="linearIndex.cuh" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Mouse\MouseEvent.h" />
     <ClInclude Include="Mouse\MouseClass.h" />
