--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# User-specific properties
+*.vcxproj
+
 # Mono auto generated files
 mono_crash.*
 
