--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,12 @@ Size=347,240
 Collapsed=0
 
 [Window][Solver Options]
-Pos=98,37
-Size=291,373
+Pos=88,40
+Size=334,390
+Collapsed=0
+
+[Window][Log]
+Pos=88,439
+Size=285,253
 Collapsed=0
 
