--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -210,24 +210,20 @@
       <GenerateRelocatableDeviceCode Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</GenerateRelocatableDeviceCode>
       <FileType>Document</FileType>
     </CudaCompile>
-    <CudaCompile Include="testCudaInterOp.cu" />
     <ClInclude Include="Cuda\helper_math.h" />
     <ClInclude Include="Raycaster\Raycasting.h" />
-    <ClInclude Include="testCudaInterOp.cuh">
-      <FileType>Document</FileType>
-    </ClInclude>
+    <ClInclude Include="Raycaster\Raycasting_Helper.h" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="StringConverter.cpp" />
     <ClCompile Include="Volume\Volume_IO.cpp" />
     <ClCompile Include="WindowContainer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Raycaster\BoundingBox.cuh" />
+    <ClInclude Include="Raycaster\BoundingBox.h" />
     <ClInclude Include="Cuda\cudaSurface.cuh" />
     <ClInclude Include="CUDA\CudaDevice.h" />
     <ClInclude Include="CUDA\CudaSolver.h" />
     <ClInclude Include="Cuda\Interoperability.cuh" />
-    <ClInclude Include="Raycaster\Ray.cuh" />
     <ClInclude Include="VolumeTexture\VolumeTexture.h" />
     <ClInclude Include="ErrorLogger.h" />
     <ClInclude Include="Engine.h" />
